--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -2,17 +2,17 @@
   <meta charset="UTF-8">
   <title>{{ page.title }}</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/stylesheets/normalize.css" media="screen">
+  <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/docs/stylesheets/normalize.css" media="screen">
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,700' rel='stylesheet' type='text/css'>
   <link href="http://fonts.googleapis.com/css?family=Montserrat:700,400,300,100" rel="stylesheet" type="text/css">
-  <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/stylesheets/stylesheet.css" media="screen">
-  <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/stylesheets/github-light.css" media="screen">
+  <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/docs/stylesheets/stylesheet.css" media="screen">
+  <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/docs/stylesheets/github-light.css" media="screen">
 
-  <link rel="icon" href="{{ site.baseurl }}/assets/OC-logo-32x32.png" sizes="32x32">
-  <link rel="icon" href="{{ site.baseurl }}/assets/OC-logo-192x192.png" sizes="192x192">
-  <link rel="apple-touch-icon-precomposed" href="{{ site.baseurl }}/assets/OC-logo-180x180.png">
+  <link rel="icon" href="{{ site.baseurl }}/docs/assets/OC-logo-32x32.png" sizes="32x32">
+  <link rel="icon" href="{{ site.baseurl }}/docs/assets/OC-logo-192x192.png" sizes="192x192">
+  <link rel="apple-touch-icon-precomposed" href="{{ site.baseurl }}/docs/assets/OC-logo-180x180.png">
 
   <!-- SLICK SLIDER -->
-  <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/slick/slick.css"/>
-  <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/slick/slick-theme.css"/>
+  <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/docs/slick/slick.css"/>
+  <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/docs/slick/slick-theme.css"/>
 </head>
