fix url assets and images

--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -13,6 +13,6 @@
   <link rel="apple-touch-icon-precomposed" href="{{ site.baseurl }}/assets/OC-logo-180x180.png">
 
   <!-- SLICK SLIDER -->
-  <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}//slick/slick.css"/>
+  <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/slick/slick.css"/>
   <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/slick/slick-theme.css"/>
 </head>
