--- a/docs/_includes/slick.html
+++ b/docs/_includes/slick.html
@@ -1,5 +1,5 @@
 <!-- <script type="text/javascript" src="slick/slick.min.js"></script> -->
-<script src="{{ site.baseurl }}/docs/slick/slick.js" type="text/javascript" charset="utf-8"></script>
+<script src="{{ site.baseurl }}/slick/slick.js" type="text/javascript" charset="utf-8"></script>
 
 <script type="text/javascript">
   $(document).ready(function(){
