--- a/docs/_includes/contribute.html
+++ b/docs/_includes/contribute.html
@@ -1,6 +1,7 @@
 <div class="column">
   <h2>How to contribute</h2>
-  <p>Bug reporting and contributions are managed via Github issues.<br>Please find more details <a href="https://github.com/opencarecc/inpe/blob/master/README.md#bug-reporting-and-contributions" target="_blank">here</a></p>
+  <p>Bug reporting and contributions are managed via Github issues. Please find more details <a href="https://github.com/opencarecc/inpe/blob/master/README.md#bug-reporting-and-contributions" target="_blank">here</a></p>
+  <p>Do you want to contribute to <a href="http://opencare.cc">opencare</a>? Fill in <a href="https://docs.google.com/forms/d/e/1FAIpQLScTPawmZVqyBLP3UyFSODRTxfCiLVqVclVWYbbVpl_jrXu77w/viewform" target="google form">this form!</a></p>
   <!-- <ul>
     <li>Bug reporting - </li>
     <li>Contribute 2</li>
