--- a/docs/_includes/credits.html
+++ b/docs/_includes/credits.html
@@ -4,5 +4,5 @@
   <br><br>
   This project has received funding from the European Union's Horizon 2020 research and innovation programme under grant agreement No 688670.
   <br><br>
-  Got questions? Leave a comment below or get in touch <a href="mailto:info@opencare.cc?subject=In Pe' info request">here</a></p>
+  Got questions? Leave a comment below or get in touch <a href="mailto:opencare@wemake.cc?subject=In Pe' info request">here</a></p>
 </div>
