--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -2,7 +2,7 @@
 
 <footer class="site-footer">
   <span class="site-footer-owner">
-    <a href="https://github.com/opencarecc/OpenCarePrototype01">Prototype01</a> is maintained by 
+    <a href="https://github.com/opencarecc/inpe">In Pe'</a> is maintained by
     <a href="https://github.com/opencarecc">opencarecc</a>.
   </span>
 
