--- a/docs/_includes/disqus.html
+++ b/docs/_includes/disqus.html
@@ -1,4 +1,4 @@
-<div id="disqus_thread"></div>
+<div id="disqus_thread"><a name="comments"></a></div>
 <script type="text/javascript">
     /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
     var disqus_shortname = 'prototype01'; // IMPORTANT: create a forum on https://disqus.com/ and replace example name with YOUR forum shortname
