--- a/docs/_layouts/home.html
+++ b/docs/_layouts/home.html
@@ -13,6 +13,7 @@
 
       <!-- Home page comments -->
       <div class="notecomments">
+	<a name="comments"></a>
         {% include disqus.html %}  
       </div>
 
