--- a/docs/_includes/release_notes.html
+++ b/docs/_includes/release_notes.html
@@ -9,7 +9,7 @@
     <li>Test mode for user testing</li>
   </ul>
   <p>
-    <a href="">
+    <a href="https://github.com/opencarecc/inpe">
       <em>More details »</em>
     </a>
   </p>
