update all includes

--- a/_includes/contribute.html
+++ b/_includes/contribute.html
@@ -1,10 +1,25 @@
+<!-- To edit the content of this module please check lang.yml -->
 <div class="column">
+  <!-- title -->
+  <h2>{{ site.data[page.lang].lang["contribute"]["title"] }}</h2>
+
+  <!-- content -->
+  <ul>
+    {% for item in site.data[page.lang].lang["contribute"]["contribution_guidelines"] %}
+      <li>{{ item.guideline }}</li>
+    {% endfor %}
+  </ul>
+
+  <!-- link to more -->
+  <p>
+    {% for item in site.data[page.lang].lang["contribute"]["more_link"] %}
+      <a href="{{ item.link }}"><em>{{ item.text }} &raquo;</em></a>
+    {% endfor %}
+  </p>
+</div>
+
+<!-- <div class="column">
   <h2>How to contribute</h2>
   <p>Bug reporting and contributions are managed via Github issues. Please find more details <a href="https://github.com/opencarecc/inpe/blob/master/README.md#bug-reporting-and-contributions" target="_blank">here</a></p>
   <p>Do you want to contribute to <a href="http://opencare.cc">opencare</a>? Fill in <a href="https://docs.google.com/forms/d/e/1FAIpQLScTPawmZVqyBLP3UyFSODRTxfCiLVqVclVWYbbVpl_jrXu77w/viewform" target="google form">this form!</a></p>
-  <!-- <ul>
-    <li>Bug reporting - </li>
-    <li>Contribute 2</li>
-    <li>Contribute 3</li>
-  </ul> -->
-</div>
+</div> -->
