--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,18 @@
-<!-- IMPORTANT: Please only change text and links. Leave the HTML structure unchanged -->
-
+<!-- To edit the content of this module please check lang.yml -->
 <footer class="site-footer">
+  <div class="column">
+    <span class="owner">
+      <a href="{{ site.baseurl }}/">{{site.name}} </a>{{ site.data[page.lang].lang["footer"]["credits_line_html"] }}
+    </span>
+    <p class="credits">{{ site.data[page.lang].lang["footer"]["eu_agreement_line"] }}</p>
+  </div>
+  <div class="column">
+    <img src="http://opencarecc.github.io/MicroWebsiteTemplate/assets/OC-EC-H2020.jpg">
+  </div>
+</footer>
+
+
+<!-- <footer class="site-footer">
   <span class="site-footer-owner">
     <a href="https://github.com/opencarecc/inpe">In Pe'</a> is maintained by
     <a href="https://github.com/opencarecc">opencarecc</a>.
@@ -10,4 +22,4 @@
     <p class="site-footer-credits">This project has received funding from the European Union’s Horizon 2020 research and innovation programme under grant agreement No 688670</p>
     <img src="http://opencare.cc/assets/OC-EC-H2020.jpg">
   </div>
-</footer>
+</footer> -->
