--- a/_includes/license.html
+++ b/_includes/license.html
@@ -1,7 +1,7 @@
+<!-- To edit the content of this module please check lang.yml -->
 <div class="column">
-  <h2>Open Source</h2>
-  <!-- <img src="{{ site.baseurl }}/assets/OC-OpenSource-logo.svg"> -->
-  <p>Software - <a href="https://www.gnu.org/licenses/gpl-3.0.en.html" target="_blank">GNU General Public License</a></p>
-  <!-- <img src="{{ site.baseurl }}/assets/OC-Ohw-logo.svg"> -->
-  <p>Hardware - <a href="http://ohwr.org/cernohl" target="_blank">CERN OHL v.1.2</a></p>
+  <!-- title -->
+  <h2>{{ site.data[page.lang].lang["license"]["title"] }}</h2>
+  <!-- content -->
+  <p>{{ site.data[page.lang].lang["license"]["license_content_html"] }}</p>
 </div>
