--- a/_includes/credits.html
+++ b/_includes/credits.html
@@ -1,8 +1,16 @@
+<!-- To edit the content of this module please check lang.yml -->
 <div class="column">
+  <!-- title -->
+  <h2>{{ site.data[page.lang].lang["credits"]["title"] }}</h2>
+  <!-- content -->
+  <p>{{ site.data[page.lang].lang["credits"]["credits_content_html"] }}</p>
+</div>
+
+<!-- <div class="column">
   <h2>Credits</h2>
   <p>This website is maintained by <a href="http://wemake.cc" target="_blank">WeMake</a> as part of the <a href="http://opencare.cc/" target="_blank">opencare.cc</a> project.
   <br><br>
   This project has received funding from the European Union's Horizon 2020 research and innovation programme under grant agreement No 688670.
   <br><br>
   Got questions? Leave a comment below or get in touch <a href="mailto:opencare@wemake.cc?subject=In Pe' info request">here</a></p>
-</div>
+</div> -->
