--- a/_includes/homeheader.html
+++ b/_includes/homeheader.html
@@ -1,6 +1,16 @@
-<!-- IMPORTANT: Please only change text and links. Leave the HTML structure unchanged -->
-
 <section class="page-header">
+  <div class="page-header-content">
+    <h1 class="project-name">{{ site.data[page.lang].lang["header"]["title"] }}</h1>
+
+    <h2 class="project-tagline">{{ site.data[page.lang].lang["header"]["tagline"] }}</h2>
+
+    {% for item in site.data[page.lang].lang["header"]["buttons"] %}
+      <a href="{{ item.link }} " class="btn">{{ item.text }} </a>
+    {% endfor %}
+  </div>
+</section>
+
+<!-- <section class="page-header">
   <div class="page-header-content">
     <h1 class="project-name">In Pe'</h1>
     <h2 class="project-tagline">an open source wearable device that can detect fall<br>and call for emergency</h2>
@@ -8,4 +18,4 @@
     <a href="https://github.com/opencarecc/inpe/zipball/master" class="btn">Download .zip</a>
     <a href="https://github.com/opencarecc/inpe/wiki" class="btn">Build your own!</a>
   </div>
-</section>
+</section> -->
