--- a/_includes/slick_slider.html
+++ b/_includes/slick_slider.html
@@ -1,5 +1,8 @@
 <div class="column">
   <div class="img_slider">
+  <!-- {% for item in site.data[page.lang].lang["slick"]["pics"] %}
+      <img src="{{ item.pic }}">
+    {% endfor %} -->
     <img src="{{ site.baseurl }}/assets/slick_pics/26243604794_4d8f3e1617_k.jpg">
     <img src="{{ site.baseurl }}/assets/slick_pics/26243608564_0793221be7_k.jpg">
     <img src="{{ site.baseurl }}/assets/slick_pics/IMG_2758.jpg">
@@ -7,5 +10,8 @@
     <img src="{{ site.baseurl }}/assets/slick_pics/vlcsnap-2016-10-18-14h51m38s735.jpg">
     <img src="{{ site.baseurl }}/assets/slick_pics/IMG_1760.jpg">
   </div>
-  <p style="text-align:center">Moments from the co-design session, testing and prototyping of In Pe'</p>
+
+  <!-- slider caption -->
+  <p>{{ site.data[page.lang].lang["slick"]["description"] }}</p>
+  <!-- <p style="text-align:center">Moments from the co-design session, testing and prototyping of In Pe'</p> -->
 </div>
