--- a/_includes/homeheader.html
+++ b/_includes/homeheader.html
@@ -12,7 +12,7 @@
 
 <!-- <section class="page-header">
   <div class="page-header-content">
-    <h1 class="project-name">In Pe'</h1>
+    <h1 class="project-name">InPe</h1>
     <h2 class="project-tagline">an open source wearable device that can detect fall<br>and call for emergency</h2>
     <a href="https://github.com/opencarecc/inpe" class="btn">View on GitHub</a>
     <a href="https://github.com/opencarecc/inpe/zipball/master" class="btn">Download .zip</a>
