--- a/_includes/slick_slider.html
+++ b/_includes/slick_slider.html
@@ -13,5 +13,5 @@
 
   <!-- slider caption -->
   <p>{{ site.data[page.lang].lang["slick"]["description"] }}</p>
-  <!-- <p style="text-align:center">Moments from the co-design session, testing and prototyping of In Pe'</p> -->
+  <!-- <p style="text-align:center">Moments from the co-design session, testing and prototyping of InPe</p> -->
 </div>
