--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -14,7 +14,7 @@
 
 <!-- <footer class="site-footer">
   <span class="site-footer-owner">
-    <a href="https://github.com/opencarecc/inpe">In Pe'</a> is maintained by
+    <a href="https://github.com/opencarecc/inpe">InPe</a> is maintained by
     <a href="https://github.com/opencarecc">opencarecc</a>.
   </span>
 
